Adds redirect and empty input error checkers to GUI